--- a/prologin/gcc/templates/gcc/editions/index.html
+++ b/prologin/gcc/templates/gcc/editions/index.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 	<!-- Intro -->
-	<section id="intro" class="wrapper style2">
+	<section id="edition-2018" class="wrapper">
 		<div class="container">
 			<div class="title">Édition 2018</div>
 
@@ -32,7 +32,7 @@
 		</div>
 	</section>
 
-	<section id="intro" class="wrapper style3">
+	<section id="edition-2017" class="wrapper">
 		<div class="container">
 			<div class="title">Édition 2017</div>
 
@@ -58,7 +58,7 @@
 		</div>
 	</section>
 
-	<section id="intro" class="wrapper style2">
+	<section id="edition-2016" class="wrapper">
 		<div class="container">
 			<div class="title">Édition 2016</div>
 
@@ -78,7 +78,7 @@
 		</div>
 	</section>
 
-	<section id="intro" class="wrapper style3">
+	<section id="edition-2015" class="wrapper">
 		<div class="container">
 			<div class="title">Édition 2015</div>
 
@@ -97,7 +97,7 @@
 		</div>
 	</section>
 
-	<section id="intro" class="wrapper style2">
+	<section id="edition-2014" class="wrapper">
 		<div class="container">
 			<div class="title">Édition 2014</div>
 
