--- a/prologin/gcc/templates/gcc/ressources.html
+++ b/prologin/gcc/templates/gcc/ressources.html
@@ -2,34 +2,28 @@
 {% load static %}
 
 {% block content %}
-	<section class="wrapper important">
+	<section class="wrapper emph-infos important">
 		<div class="title">S'entraîner à coder</div>
-		<div class="row">
-			<div class="off-2-large col-8-large off-1 col-10 off-1-medium col-10-medium off-0-small col-12-small">
-				<p class="style2" style="font-size: 1.5em; padding: 20px; font-weight: normal;">
-					Beaucoup de ressources sont disponibles sur Internet pour te permettre de découvrir l’informatique, mais il est parfois difficile de s'orienter face à la quantité d'informations.
-					Nous détaillons ici quelques ressources particulièrement intéressantes pour débuter et s'entraîner.
-				</p>
-			</div>
+		<div class="container">
+			<p>
+				Beaucoup de ressources sont disponibles sur Internet pour te permettre de découvrir l’informatique, mais il est parfois difficile de s'orienter face à la quantité d'informations.
+				Nous détaillons ici quelques ressources particulièrement intéressantes pour débuter et s'entraîner.
+			</p>
 		</div>
 	</section>
 
-	<section class="wrapper">
+	<section class="wrapper emph-infos">
 		<div class="title">Quel langage ?</div>
 		<div class="container">
-			<div class="row">
-				<div class="off-2-large col-8-large off-1-medium col-10-medium off-0-small col-12-small">
-					<p>
-						Coder consiste à décrire des opérations que la machine exécutera, et pour communiquer avec la machine on doit choisir au préalable dans quel langage on va lui parler.
-						Il existe de très nombreux langages de programmation, chacun ayant ses spécificités.
-					</p>
-					<p>
-						Il est important de savoir dans quel langage on souhaite commencer à programmer avant de se lancer. On apprends à programmer dans un langage.
-						Pendant les stages nous enseignons principalement le Python, que nous recommandons pour débuter.
-						C’est un langage assez facile à prendre en main (comparé à d’autres...) et qui a de nombreuses utilisations. Il est par exemple utilisé dans Youtube.
-					</p>
-				</div>
-			</div>
+			<p>
+				Coder consiste à décrire des opérations que la machine exécutera, et pour communiquer avec la machine on doit choisir au préalable dans quel langage on va lui parler.
+				Il existe de très nombreux langages de programmation, chacun ayant ses spécificités.
+			</p>
+			<p>
+				Il est important de savoir dans quel langage on souhaite commencer à programmer avant de se lancer. On apprends à programmer dans un langage.
+				Pendant les stages nous enseignons principalement le Python, que nous recommandons pour débuter.
+				C’est un langage assez facile à prendre en main (comparé à d’autres...) et qui a de nombreuses utilisations. Il est par exemple utilisé dans Youtube.
+			</p>
 		</div>
 	</section>
 
@@ -41,8 +35,8 @@
 				<div class="col-4 col-12-medium">
 					<section class="highlight">
 						{% with url="http://www.france-ioi.org/" %}
-						<a target="_blank" href="{{url}}" class="image featured" style="height: 200px; padding: 20px;">
-							<img src="{% static 'gcc/img/logo_ioi.png' %}" alt="" style="height: 100%" />
+						<a target="_blank" href="{{url}}" class="image featured">
+							<img src="{% static 'gcc/img/logo_ioi.png' %}" />
 						</a>
 
 						<h3><a target="_blank" href="{{url}}">France IOI</a></h3>
@@ -58,8 +52,8 @@
 				<div class="col-4 col-12-medium">
 					<section class="highlight">
 						{% with url="https://www.codecademy.com/fr" %}
-						<a target="_blank" href="{{url}}" class="image featured" style="height: 200px; padding: 20px;">
-							<img src="{% static 'gcc/img/logo_codeac.svg' %}" alt="" style="height: 100%;" />
+						<a target="_blank" href="{{url}}" class="image featured">
+							<img src="{% static 'gcc/img/logo_codeac.svg' %}" />
 						</a>
 
 						<h3><a target="_blank" href="{{url}}">Codeacademy</a></h3>
@@ -86,39 +80,43 @@
 						Il y a beaucoup de sous domaines et d'applications en informatique, et pour continuer à coder, c’est motivant de trouver quelque chose qui nous plait.
 						Voici quelques exemples :
 					</p>
-
-					<div class="row feature-list" style="margin-left: -30px;">
-						{% with url="https://djangogirls.org/" %}
-						<div class="col-3 col-4-medium off-0-small col-12-small" style="margin: auto; text-align: center;">
-							<a href="{{url}}">
-								<img src="https://djangogirls.org/static/img/global/logo.png" style="max-width: 100%;" />
-							</a>
-						</div>
-						<div class="col-9 col-8-medium off-0-small col-12-small">
-							<h3><a href="{{url}}">Django girls</a></h3>
-							<p>
-								Elles ont écrit un tutoriel pour la création d’un blog en Python avec le framework Django.
-								Il a été traduit entièrement en français et est très accessible.
-								Django est un outil très puissant pour le web. Les sites de GCC! et Prologin utilisent d’ailleurs ce framework.
-							</p>
-						</div>
-						{% endwith %}
-						<div class="col-3 col-4-medium off-0-small col-12-small" style="margin: auto; text-align: center;">
-							<a href="{% url 'home' %}">
-								<img src="{% static 'img/logo_cube.png' %}" style="max-width: 100%;" />
-							</a>
-						</div>
-						<div class="col-9 col-8-medium off-0-small col-12-small">
-							<h3><a href="{% url 'home' %}">Prologin</a></h3>
-							<p>
-								C’est le nom de l’association qui organise les stages mais aussi un concours d’informatique destiné aux jeunes de moins de 21 ans.
-								Sur son site, tu peux trouver les archives des exercices des années précédentes.
-								Ce sont des petits problèmes qui donnent une entrée et demandent une réponse précise, c’est à toi d’écrire le programme qui trouve la réponse !
-							</p>
-						</div>
-					</div>
 				</div>
 			</div>
-		</div>
+
+					<div class="feature-list">
+						<section class="row">
+							{% with url="https://djangogirls.org/" %}
+							<div class="img-container col-3 col-4-medium off-0-small col-12-small">
+								<a href="{{url}}">
+									<img src="https://djangogirls.org/static/img/global/logo.png" />
+								</a>
+							</div>
+							<div class="col-9 col-8-medium off-0-small col-12-small">
+								<h3><a href="{{url}}">Django girls</a></h3>
+								<p>
+									Elles ont écrit un tutoriel pour la création d’un blog en Python avec le framework Django.
+									Il a été traduit entièrement en français et est très accessible.
+									Django est un outil très puissant pour le web. Les sites de GCC! et Prologin utilisent d’ailleurs ce framework.
+								</p>
+							</div>
+							{% endwith %}
+						</section>
+						<section class="row">
+							<div class="img-container col-3 col-4-medium off-0-small col-12-small">
+								<a href="{% url 'home' %}">
+									<img src="{% static 'img/logo_cube.png' %}" />
+								</a>
+							</div>
+							<div class="col-9 col-8-medium off-0-small col-12-small">
+								<h3><a href="{% url 'home' %}">Prologin</a></h3>
+								<p>
+									C’est le nom de l’association qui organise les stages mais aussi un concours d’informatique destiné aux jeunes de moins de 21 ans.
+									Sur son site, tu peux trouver les archives des exercices des années précédentes.
+									Ce sont des petits problèmes qui donnent une entrée et demandent une réponse précise, c’est à toi d’écrire le programme qui trouve la réponse !
+								</p>
+							</div>
+						</section>
+					</div>
+				</div>
 	</section>
 {% endblock %}
