--- a/prologin/gcc/templates/gcc/base.html
+++ b/prologin/gcc/templates/gcc/base.html
@@ -52,6 +52,9 @@
 						{% endwith %}
 					</ul>
 				</li>
+				<li class="pull-right">
+					<a href="{% url 'gcc:login' %}">Connection</a>
+				</li>
 			</ul>
 		</nav>
 	</section>
