--- a/prologin/gcc/templates/gcc/base.html
+++ b/prologin/gcc/templates/gcc/base.html
@@ -12,6 +12,7 @@
         <title>{% block title %}Girls Can Code!{% endblock %}</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+        <link rel="icon" type="image/png" href="{% static 'gcc/img/favicon.png' %}">
         <link rel="stylesheet" href="{% static 'lib/css/font-awesome.min.css' %}" />
         <link rel="stylesheet" href="{% static 'gcc/css/grid.css' %}" />
         <link rel="stylesheet" href="{% static 'gcc/css/main.css' %}" />
